[svn r944] [iRedMail] * Add 'ou=Groups' by default in tools/create_mail_user_OpenLDAP.sh. * Add forwarding detect in virtual_alias_maps for mysql backend. * Add more ldap attributes: domainCurrentQuotaSize, domainCurrentUserNumber, domainCurrentAliasesNumber.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.4.1:
+    * Add more ldap attributes: domainCurrentQuotaSize,
+      domainCurrentUserNumber, domainCurrentAliasNumber.
     * Add objectclass mailAlias in ldap schema, sync postfix alias lookup
       and roundcube global address book lookup, both will search mailList,
       mailAlias, mailUser forwarding in one search filter.
