--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.4.1:
+    * Add bcc control in postfix bcc lookup map.
     * LDAP attribute 'domainStatus' is deprecated, use accountStatus instead.
     * Add more ldap attributes: domainCurrentQuotaSize,
       domainCurrentUserNumber, domainCurrentAliasNumber.
