--- a/iRedMail/README
+++ b/iRedMail/README
@@ -32,3 +32,12 @@ Full Installation Guide:
     - http://code.google.com/p/iredmail/issues/list
 
 *) Forum: http://www.iredmail.org/forum/
+
+========
+*) Source packages we patched or modified can be download here:
+    - http://www.iredmail.org/yum/srpms/
+
+   Other packages not listed in above directory are all fetched from
+   dag/epel repositories. Thanks.
+    - Dag: http://dag.wieers.com/
+    - EPEL: http://fedoraproject.org/wiki/EPEL
