[svn r961] iRedMail on Debian: * Fix crontab spool directory location. * Enable cron daily work: sa-update.

--- a/iRedMail/README
+++ b/iRedMail/README
@@ -13,7 +13,7 @@ Quick Installation Guide:
 
         * Install necessary packages:
 
-            # apt-get install dialog acl dpkg-dev
+            # apt-get install dialog acl dpkg-dev mktemp
 
         * Add mount option 'acl' in /etc/fstab which contains '/etc/' directory:
 
