--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
-iRedMail-0.5.0-beta1
+iRedMail-0.5.0-beta2
+    * Add rc script for iptables used on Debian.
     * Works on Debian (Lenny, 5.0.1) now.
     * Add priority (=1) in iRedMail repo file. Thanks scrummie02@forum.
     * Update phpLDAPadmin to 1.1.0.7.
