--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,5 @@
 iRedMail-0.5.0-beta2
-    * Add storageBaseDirectory/storagebasedir to store mail storage base dir.
+    * Works on Ubuntu 9.04 (Juanty) now.
     * Add rc script for iptables used on Debian.
     * Works on Debian (Lenny, 5.0.1) now.
     * Add priority (=1) in iRedMail repo file. Thanks scrummie02@forum.
