--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -27,7 +27,7 @@ iRedMail-0.5.0-beta2
     * Update phpMyAdmin to 2.11.9.5.
     * Address of mail group/list will be autocomplete while you type
       recipients in roundcube now.
-    * Say goodbye to Horde, SquirrelMail.
+    * Say goodbye to Horde.
     * Add group mail/alias support for openldap backend.
     * Add attribute for mail list access policy control.
     * Add missing index attributes in OpenLDAP: listMember, listAllowedUser,
