--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,6 @@
+iRedMail-0.5.0-beta3
+    * Update SquirrelMail to 1.4.19.
+
 iRedMail-0.5.0-beta2
     * Works on Ubuntu 9.04 (Juanty) now.
     * Add rc script for iptables used on Debian.
