--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.0-beta4
+    * Update perl-Mail-DKIM to 0.35. hope to fix dkim issue in amavisd.
     * Add new ldap attribute: memberOfGroup.
 
 iRedMail-0.5.0-beta3
