--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,12 @@
 iRedMail-0.5.0-rc2:
+    * Flexible storage base directory used to store users' mail data, easy
+      to change, useful for large-scale deployment. e.g.:
+        You mail data are all stored in /home/vmail01, but it's nearly full,
+        it's easy to make new users use new storage like /home/vmail10/:
+            - Prevous maildir: /home/vmail01/z/zh/zha/zhang/
+            - Current maildir: /home/vmail20/h/hu/hua/huang/
+      Set it in storagebasedirectory (for MySQL backend) or
+      storageBaseDirectory (for LDAP backend).
     * Add group 'all@domain.ltd' by default for ldap solution.
     * Add 'enabledService=displayedInGlobalAddressBook' for ldap solution,
       used to control mail address displayed in global ldap address book or
