--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.5.0-rc2:
+    * Enable anti-spam & anti-virus on Debian & Ubuntu by default. Thanks
+      Falador@forum.
     * Add quota warning report tool: tools/dovecot-quota-warning.sh.
     * Automatically add a disclaimer to outgoing emails with Amavisd-new +
       alterMIME (v0.3.10).
