--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.0-rc2:
+    * Add relay_domains & relay_recipient_maps in postfix, used for backup mx.
     * Improve global ldap address book in roundcube, make it search accounts
       which in the same domain.
     * Horde webmail (+groupware) is back and update to 1.2.3.
