--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.5.0:
+    * Enable dovecot quota warning by default.
+    * Update: dovecot -> 1.1.17.
     * Move default mail storage directory: /home/vmail -> /var/mail/. Use
       /var/mail/vmail01 as default storage base directory. Thanks mbsouth
       @forum.
