--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.0:
+    * Set storagebasedirectory in MySQL template.
     * Add ldap attribute and mysql column 'disclaimer' to store disclaimer
       text.
     * Enable dovecot quota warning by default.
