--- a/iredadmin-ose/AUTHORS
+++ b/iredadmin-ose/AUTHORS
@@ -1,1 +1,5 @@
-* Zhang Huangbin <michaelbibby AT gmail.com>
+Authors:
+    * Zhang Huangbin <michaelbibby@gmail.com>
+
+Contributors:
+    * no.0023@gmail.com
