--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.0:
+    * Fix DKIM singing issue on Debian/Ubuntu. Thanks shake.chen@gmail.
     * Add columns/attributes to store user last-login data.
     * Support per-user transport maps, enabled by default.
     * Remove unnecessary ldap lookup in postfix.
