--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.0:
+    * Update: dovecot -> 1.1.18.
     * Fix DKIM singing issue on Debian/Ubuntu. Thanks shake.chen@gmail.
     * Add columns/attributes to store user last-login data.
     * Support per-user transport maps, enabled by default.
@@ -7,9 +8,8 @@ iRedMail-0.5.0:
     * Add ldap attribute and mysql column 'disclaimer' to store disclaimer
       text.
     * Enable dovecot quota warning by default.
-    * Update: dovecot -> 1.1.17.
-    * Move default mail storage directory: /home/vmail -> /var/mail/. Use
-      /var/mail/vmail01 as default storage base directory. Thanks mbsouth
+    * Move default mail storage directory: /home/vmail -> /var/vmail/. Use
+      /var/vmail/vmail01 as default storage base directory. Thanks mbsouth
       @forum.
     * Only modify /etc/amavis/conf.d/50-user in debian & ubuntu.
     * Fix DKIM singing issue: disable 'forward_method' in policy_bank
