--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.0:
+    * Fix mod_auth_mysql config issue on Ubuntu.
     * Update: dovecot -> 1.1.18.
     * Fix DKIM singing issue on Debian/Ubuntu. Thanks shake.chen@gmail.
     * Add columns/attributes to store user last-login data.
