--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,6 @@
+iRedMail-0.5.1:
+    * Fix per-user sieve setting in dovecot. Thanks Emidio Reggiani @forum.
+
 iRedMail-0.5.0:
     * Fix mod_auth_mysql config issue on Ubuntu.
     * Update: dovecot -> 1.1.18.
