--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.5.1:
+    * Remove php-eaccelerator, will abort installation process when php-5.2+
+      already installed.
     * Add missing service control in postfix ldap lookup table.
     * Fix per-user sieve setting in dovecot. Thanks Emidio Reggiani
       and Caliban @forum.
