--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.1:
+    * Add per-user alias address support in LDAP backend.
     * Add missing pkg: altermime for RHEL/CentOS (i386). Thanks to
       sdaniel@bbs.
     * Remove 'reject_sender_login_mismatch' from smtpd_sender_restrictions in
