--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.1:
+    * Add @mynetworks in amavisd config for Debian/Ubuntu.
     * Make file world-readable if ACL is not available.
     * Add per-user shadow address support in LDAP backend.
     * Add missing pkg: altermime for RHEL/CentOS (i386). Thanks to
