--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.5.1:
+    * Add one more ldap attribute and sql column: domainDefaultUserQuota,
+      defaultuserquota.
     * Update postfix to 2.5.9.
     * Replace sshd port number in default iptable rule by the current setting.
     * Add @mynetworks in amavisd config for Debian/Ubuntu.
