--- a/iRedMail/README
+++ b/iRedMail/README
@@ -9,33 +9,6 @@ Quick Installation Guide:
         # cd ../
         # sh iRedMail.sh
 
-    *) on Debian (Lenny):
-
-        * Install necessary packages:
-
-            # apt-get install dialog acl mktemp
-
-        * Add mount option 'acl' in /etc/fstab which contains '/etc/' directory:
-
-           /dev/hda1       /               ext3    acl,errors=remount-ro 0       1
-
-        * Remount the mount point which contains '/etc/' directory:
-
-            # mount -o remount,rw,acl /
-
-        * Update /etc/apt/sources.list, use 'testing' version. e.g.
-
-            deb http://mirrors.163.com/debian testing main contrib non-free
-
-        * Run 'apt-get update' to update your apt repository info.
-
-            # apt-get update
-
-        * Run iRedMail main script:
-
-            # cd /path/to/iRedMail-x.y.z/
-            # sh iRedMail.sh
-
 ========
 Full Installation Guide:
 
@@ -45,17 +18,24 @@ Full Installation Guide:
 *) Please do read the installation guide before you run any script
    shipped within iRedMail:
 
-   - English: http://code.google.com/p/iredmail/wiki/Installation
-   - Chinese: http://www.iredmail.org/wiki/index.php?title=IRedMail_Installation_Guide
+   - Red Hat Enterprise Linux 5 & CentOS 5:
+     http://code.google.com/p/iredmail/wiki/Installation
+
+   - Debian 5
+     http://code.google.com/p/iredmail/wiki/Installation_on_Debian
+
+   - Ubuntu 8.04 & 9.04
+     http://code.google.com/p/iredmail/wiki/Installation_on_Ubuntu
 
 ========
 *) License: GPL v2
 
 *) Authors:
-    - http://code.google.com/p/iredmail/wiki/Members
+    - Zhang Huangbin (michaelbibby@gmail.com)
 
-*) Credits:
-    - http://code.google.com/p/iredmail/wiki/Credits
+*) Contributor:
+    - Li Daobing (lidaobing (at) gmail.com)
+      Maintainer of Debian & Ubuntu binary packages.
 
 *) Issue tracker & bug report:
     - http://code.google.com/p/iredmail/issues/list
