--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.1:
+    * Make user can't change employeeNumber.
     * Add more LDAP attributes: domainDefaultUserQuota,
       domainMinPasswordLength, domainMaxPasswordLength.
     * Add more sql columns: defaultuserquota, minpasswordlength, maxpasswordlength.
