--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.5.1:
+    * Remove three more unnecessary dialog pages.
     * Use random password for ldap admin dn: cn=vmailadmin.
     * Add domain alias support with new ldap attribute: domainAliasName.
     * Ability to restrict POP3S & IMAPS in dovecot now.
