--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.6.0:
+    * Update phpMyAdmin to 2.11.9.6.
     * New LDAP attribute: accountSetting.
     * Update roundcube to 0.3.1.
     * Add script used to generate new SSL keys: tools/generate_ssl_keys.sh.
