--- a/iRedMail/README
+++ b/iRedMail/README
@@ -21,11 +21,14 @@ Full Installation Guide:
    - Red Hat Enterprise Linux 5 & CentOS 5:
      http://code.google.com/p/iredmail/wiki/Installation
 
-   - Debian 5
+   - Debian 5.x
      http://code.google.com/p/iredmail/wiki/Installation_on_Debian
 
    - Ubuntu 8.04 & 9.04
      http://code.google.com/p/iredmail/wiki/Installation_on_Ubuntu
+
+   - FreeBSD 7.2 & 8.0
+     http://code.google.com/p/iredmail/wiki/Installation_on_FreeBSD
 
 ========
 *) License: GPL v2
@@ -33,7 +36,7 @@ Full Installation Guide:
 *) Authors:
     - Zhang Huangbin (michaelbibby@gmail.com)
 
-*) Contributor:
+*) Contributors:
     - Li Daobing (lidaobing (at) gmail.com)
       Maintainer of Debian & Ubuntu binary packages.
 
