--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.6.0-beta2:
+    * Integrate iRedAPD-1.2 to provide mail list access management for LDAP
+      backend.
     * Upgrade phpLDAPadmin to 1.2.0.5.
     * Use yum repository to install all rpm packages on RHEL/CentOS.
     * Move dovecot-quota-warning.sh to /usr/local/bin/. Thanks chunlinyao@bbs.
