--- a/extra/iredadmin-i18n/es_ES/LC_MESSAGES/iredadmin.po
+++ b/extra/iredadmin-i18n/es_ES/LC_MESSAGES/iredadmin.po
@@ -6,9 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: iRedAdmin 1.1.0\n"
-"Report-Msgid-Bugs-To: michaelbibby@gmail.com\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2009-11-28 17:33+0500\n"
-"PO-Revision-Date: 2010-02-05 00:01+0800\n"
+"PO-Revision-Date: 2010-02-07 00:54+0800\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: es_ES <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -1103,8 +1103,8 @@ msgid "Selected domains were deleted."
 msgstr ""
 
 #: ../templates/default/ldap/msgHandlers.html:74
-msgid "Selected domains were diabled."
-msgstr ""
+msgid "Selected domains were disabled."
+msgstr "Seleccione cuentas para deshabiltar."
 
 #: ../templates/default/ldap/msgHandlers.html:76
 msgid "Selected domains were enabled."
