--- a/extra/iredadmin-i18n/zh_CN/LC_MESSAGES/iredadmin.po
+++ b/extra/iredadmin-i18n/zh_CN/LC_MESSAGES/iredadmin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: iRedAdmin 1.1.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2009-10-22 17:33+0800\n"
-"PO-Revision-Date: 2010-02-05 00:01+0800\n"
+"PO-Revision-Date: 2010-02-07 00:54+0800\n"
 "Last-Translator: Zhang Huangbin <michaelbibby@gmail.com>\n"
 "Language-Team: zh_CN <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
@@ -1101,7 +1101,7 @@ msgid "Selected domains were deleted."
 msgstr "已删除选定的域。"
 
 #: ../templates/default/ldap/msgHandlers.html:74
-msgid "Selected domains were diabled."
+msgid "Selected domains were disabled."
 msgstr "已禁用选定的域。"
 
 #: ../templates/default/ldap/msgHandlers.html:76
